--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Calendar</title>
   </head>
   <body>
     <div id="root"></div>
-    <script src="http://localhost:8097"></script>
+    <!-- <script src="http://localhost:8097"></script> -->
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
